--- a/app/src/main/res/drawable/ic_videoback.xml
+++ b/app/src/main/res/drawable/ic_videoback.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="324">
   <path
       android:pathData="M0,-25C0,-42.673 14.327,-57 32,-57H328C345.673,-57 360,-42.673 360,-25V292C360,309.673 345.673,324 328,324H32C14.327,324 0,309.673 0,292V-25Z"
-      android:fillColor="#A4D792"/>
+      android:fillColor="#86c5e5"/>
 </vector>
