--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -13,7 +13,7 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="200dp"
-        android:src="@drawable/ic_logo"/>
+        android:src="@drawable/loading_logo"/>
 
     <TextView
         android:id="@+id/logo_name"
